k8s/services/ripe-atlas/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ripe-atlas
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: probe
          image: jamesits/ripe-atlas
          imagePullPolicy: Always
          volumeMounts:
            - name: etc
              mountPath: /etc/ripe-atlas
            - name: run
              mountPath: /run/ripe-atlas
            - name: spool
              mountPath: /var/spool/ripe-atlas
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_RAW
                - KILL
                - SETUID
                - SETGID
                - CHOWN
                - FOWNER
                - DAC_OVERRIDE
      volumes:
        - name: etc
          persistentVolumeClaim:
            claimName: ripe-atlas-etc
        - name: run
          persistentVolumeClaim:
            claimName: ripe-atlas-run
        - name: spool
          persistentVolumeClaim:
            claimName: ripe-atlas-spool
