k8s/services/ripe-atlas/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector: {}
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 0.0.0.0/8
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 169.254.0.0/16
            - 192.0.2.0/24
            - 192.88.99.0/24
            - 192.168.0.0/16
            - 172.16.0.0/12
            - 198.18.0.0/15
            - 198.51.100.0/24
            - 203.0.113.0/24
            - 224.0.0.0/3

            - 209.112.97.0/24
        - cidr: ::/0
          except:
            - ::/8
            - 64:ff9b::/96
            - 100::/8
            - 200::/7
            - 400::/6
            - 800::/5
            - 1000::/4
            - 2001::/33
            - 2001:0:8000::/33
            - 2001:2::/48
            - 2001:3::/32
            - 2001:10::/28
            - 2001:20::/28
            - 2001:db8::/32
            - 2002::/16
            - 3ffe::/16
            - 4000::/3
            - 5f00::/8
            - 6000::/3
            - 8000::/3
            - a000::/3
            - c000::/3
            - e000::/4
            - f000::/5
            - f800::/6
            - fc00::/7
            - fe80::/10
            - fec0::/10
            - ff00::/8

            - 2001:67c:17fc::/48
            - 2a06:e881:7700::/40
